Format text for MuSe and AMBER descriptions in projects.html and adjust teaching page links for better readability

--- a/projects.html
+++ b/projects.html
@@ -184,7 +184,13 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">MuSe</h4>
-                        <p class="card-text text-justify small">MuSe is a mutation-based tool for generating benchmarks by injecting vulnerabilities into smart contracts. It features six mutation operators to inject vulnerabilities. MuSe is based on a mutation testing tool called SuMo, which was designed to run mutation testing on Solidity projects in a NodeJS environment. It can run test using Truffle, Hardhat, Brownie and Forge. If needed, SuMo can also automatically spawn Ganache instances to guarantee a clean-room testing environment between mutants. It is released under the GPL v3.0 license.</p>
+                        <p class="card-text text-justify small">MuSe is a mutation-based tool for generating benchmarks
+                            by injecting vulnerabilities into smart contracts. It features six mutation operators to
+                            inject vulnerabilities. MuSe is based on a mutation testing tool called SuMo, which was
+                            designed to run mutation testing on Solidity projects in a NodeJS environment. It can run
+                            test using Truffle, Hardhat, Brownie and Forge. If needed, SuMo can also automatically spawn
+                            Ganache instances to guarantee a clean-room testing environment between mutants. It is
+                            released under the GPL v3.0 license.</p>
                         <h6><a href="https://github.com/GerardoIuliano/MuSe" target="_blank">Source Code</a></h6>
                     </div>
                 </div>
@@ -192,7 +198,10 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">AMBER</h4>
-                        <p class="card-text text-justify small">AMBER is an AI-enabled extension of JMH that leverages Time Series Classification algorithms to predict the beginning of the steady-state phase at run-time and dynamically halt warm-up iterations accordingly. It is released under the MIT license.</p>
+                        <p class="card-text text-justify small">AMBER is an AI-enabled extension of JMH that leverages
+                            Time Series Classification algorithms to predict the beginning of the steady-state phase at
+                            run-time and dynamically halt warm-up iterations accordingly. It is released under the MIT
+                            license.</p>
                         <h6><a href="https://github.com/AntonioTrovato/AMBER" target="_blank">Source Code</a> - <a
                                 href="https://www.youtube.com/watch?v=7zOngDQ1z_k" target="_blank">Video</a></h6>
                     </div>
