--- a/teaching.html
+++ b/teaching.html
@@ -101,8 +101,8 @@
                                     <td>Sustainable Software Engineering</td>
                                     <td>MSc in Computer Science</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2025 with <a href="https://docenti.unisa.it/033024/home"
-                                            target="blank">G. Catolino</a>
+                                    <td>Fall 2025 with <a href="https://docenti.unisa.it/033024/home" target="blank">G.
+                                            Catolino</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -114,8 +114,8 @@
                                         Spring 2025 with <a href="https://docenti.unisa.it/033024/home"
                                             target="blank">G. Catolino</a><br />
                                         Spring 2024 with <a href="https://docenti.unisa.it/004724/home"
-                                            target="blank">C. Gravino</a> and <a href="https://docenti.unisa.it/033024/home"
-                                            target="blank">G. Catolino</a>
+                                            target="blank">C. Gravino</a> and <a
+                                            href="https://docenti.unisa.it/033024/home" target="blank">G. Catolino</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -136,7 +136,7 @@
                                     <td>International School</td>
                                     <td>MSc in Cyber-security and Cloud Technologies</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2026 with Prof. C. De Maio, Prof. V. Scarano, and Prof. V.
+                                    <td>Spring 2026 with C. De Maio, V. Scarano, and V.
                                         Deufemia</a>
                                     </td>
                                 </tr>
@@ -167,8 +167,8 @@
                                     <td>University of Salerno</td>
                                     <td>Summer 2025 with <a href="https://docenti.unisa.it/004724/home"
                                             target="blank">C. Gravino</a><br />
-                                        Summer 2023 with <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>
+                                        Summer 2023 with <a href="https://fpalomba.github.io/" target="blank">F.
+                                            Palomba</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -194,12 +194,18 @@
                                     <td>Jheronimus Academy of Data Science</td>
                                     <td>Fall 2021 with <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W. J. van den Heuvel</a>, <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D. A. Tamburri</a>, and <a href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika Priyantha Kumara Weerasingha Dewage</a>
+                                            target="blank"> W. J. van den Heuvel</a>, <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D. A. Tamburri</a>, and <a
+                                            href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika
+                                            Priyantha Kumara Weerasingha Dewage</a>
                                         <br />Fall 2020 with <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W. J. van den Heuvel</a>, <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D. A. Tamburri</a>, and <a href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika Priyantha Kumara Weerasingha Dewage</a>
+                                            target="blank"> W. J. van den Heuvel</a>, <a
+                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D. A. Tamburri</a>, and <a
+                                            href="https://scholar.google.com/citations?user=IfiRc9MAAAAJ&hl=en"> Indika
+                                            Priyantha Kumara Weerasingha Dewage</a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -217,11 +223,11 @@
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc in Computer Science</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 yearly course with <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
+                                    <td>2019/20 yearly course with <a href="http://soft.vub.ac.be/~cderoove/"
+                                            target="blank">C. De
                                             Roover</a>
-                                        <br /> 2018/19 yearly course with <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
+                                        <br /> 2018/19 yearly course with <a href="http://soft.vub.ac.be/~cderoove/"
+                                            target="blank">C. De
                                             Roover</a>
                                     </td>
                                 </tr>
