--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="my-auto">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="mb-5">Di Nucci Dario</h1>
+                        <h1 class="mb-5">Dario Di Nucci</h1>
                     </div>
                 </div>
                 <div class="row">
