--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
                             and <b>mining of software repositories</b>.<br />
                             I am a member at large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
-                                Conference Activities Committee</a>.<br />
+                                Conference Activities Committee</a>.
                             I serve as editor for ACM Transactions on Software Engineering and Methodology and Elsevier
-                            Journal of Systems and Software, and I am an <a
-                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
-                                Software initiative team member</a>.<br />
+                            Journal of Systems.<br />
                             I am a program committee member of international conferences and a referee for international
                             journals in software engineering and artificial intelligence.
                             For my services, I received several distinguished and outstanding reviewer awards.<br />
