--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
                         <p class="card-text text-justify small">
                             ACM Transactions on Software Engineering and Methodology: 2024 - Now<br />
                             Elsevier Journal of Systems and Software: 2021 - Now<br />
-                            IEEE Software - Initiatives Team: 2020 - Now<br />
+                            IEEE Software - Initiatives Team: 2020 - 2025<br />
                             Elsevier Science of Computer Programming: 2021 - 2025<br />
                             Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software
                             Health of Software Ecosystems": 2020 - 2021<br />
