Fix formatting in index.html by removing unnecessary line break in journal description

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
                                 Conference Activities Committee</a>.
                             I serve as editor for ACM Transactions on Software Engineering and Methodology and Elsevier
-                            Journal of Systems and Software.<br />
+                            Journal of Systems and Software.
                             I am a program committee member of international conferences and a referee for international
                             journals in software engineering and artificial intelligence.
                             For my services, I received several distinguished and outstanding reviewer awards.<br />
