Enhance HTML pages with new font styles and improved layout
- Updated font links to use 'Inter' font family across publications, services, and teaching pages.
- Added gradient text styling for section headers in publications, services, and teaching sections.
- Refactored publication and service entries for better readability and structure using flexbox.
- Included modern interactions script for enhanced user experience.

--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html>    <!-- Custom fonts for this template -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 <head>
 
     <meta charset="utf-8">
@@ -69,7 +72,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
 
-            <h2 class="mb-5">Publications and Awards</h2>
+            <h2 class="gradient-text mb-5">Publications and Awards</h2>
 
             <div class="card mb-2">
                 <div class="card-body">
@@ -135,6 +138,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+    <script src="js/modern-interactions.js"></script>
 
 </body>
 
