--- a/teaching.html
+++ b/teaching.html
@@ -14,10 +14,9 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
@@ -68,9 +67,9 @@
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
 
-            <h2 class="mb-5">Teaching</h2>
+            <h2 class="gradient-text mb-5">Teaching</h2>
 
-            <h4 class="mb-5">Currently Taught Courses</h4>
+            <h4 class="gradient-text mb-5">Currently Taught Courses</h4>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -146,7 +145,7 @@
                 </div>
             </div>
 
-            <h4 class="mb-5">Past Taught Courses</h4>
+            <h4 class="gradient-text mb-5">Past Taught Courses</h4>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -257,6 +256,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+    <script src="js/modern-interactions.js"></script>
 
 </body>
 
