--- a/index.html
+++ b/index.html
@@ -107,6 +107,34 @@
                                 </p>
                             </div>
 
+                            <ul class="list-social-icons mb-0">
+                                <li>
+                                    <a href="mailto:d.dinucci@ieee.org" title="Email">
+                                        <i class="fas fa-envelope"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" title="LinkedIn">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ" title="Google Scholar">
+                                        <i class="ai ai-google-scholar"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/dardin88" title="Twitter">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/dardin88" title="GitHub">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </li>
+                            </ul>
+
                         </div>
                     </div>
 
@@ -156,55 +184,7 @@
                                 <p class="text-muted mb-0">University of Molise<br>Computer Science<br><small>Grade: 110/110 cum laude</small></p>
                             </div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center mt-5">
-                    <div class="col-lg-8">
-                        <div class="contact-info">
-                            <a href="https://www.unisa.it/" target="_blank" class="d-block mb-3">
-                                <img id="unisa-logo" src="img/unisa.jpg" alt="University of Salerno" />
-                            </a>
-                            <h4 class="gradient-text mb-3">Università degli Studi di Salerno</h4>
-                            <p class="text-muted mb-3">
-                                Via Giovanni Paolo II, 132<br>
-                                84084 Fisciano (SA) - Italy
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <ul class="list-social-icons mb-0">
-                            <li>
-                                <a href="mailto:d.dinucci@ieee.org" title="Email">
-                                    <i class="fas fa-envelope"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" title="LinkedIn">
-                                    <i class="fab fa-linkedin"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ" title="Google Scholar">
-                                    <i class="ai ai-google-scholar"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/dardin88" title="Twitter">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/dardin88" title="GitHub">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    </div>                </div>
             </div>
         </section>
 
