Update project section headings and streamline dataset presentation

--- a/projects.html
+++ b/projects.html
@@ -183,7 +183,7 @@
 
                 </div>
 
-                <h2 class="mt-5 mb-2">Tools</h2>
+                <h3 class="mt-5 mb-2 text-primary">Tools and Datasets</h3>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -330,67 +330,14 @@
                     </div>
                 </div>
 
-                <div class="row mt-5">
-                    <div class="col-12">
-                        <h3 class="mb-4 text-primary">Tools & Software</h3>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6 mb-4">
-                        <div class="modern-card h-100">
-                            <div class="d-flex align-items-center justify-content-between mb-3">
-                                <h4 class="card-title mb-0">MuSe</h4>
-                                <a href="https://github.com/GerardoIuliano/MuSe" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fab fa-github me-1"></i> Source
-                                </a>
-                            </div>
-                            <div class="mb-3">
-                                <span class="badge bg-secondary me-2">Mutation Testing</span>
-                                <span class="badge bg-info text-dark">GPL v3.0</span>
-                            </div>
-                            <p class="card-text">MuSe is a mutation-based tool for generating benchmarks by injecting vulnerabilities into smart contracts. Features six mutation operators and works with Truffle, Hardhat, Brownie and Forge.</p>
-                            <div class="mt-auto">
-                                <small class="text-muted">Tech: Solidity, NodeJS, Smart Contracts</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 mb-4">
-                        <div class="modern-card h-100">
-                            <div class="d-flex align-items-center justify-content-between mb-3">
-                                <h4 class="card-title mb-0">SuMo</h4>
-                                <a href="https://github.com/GerardoIuliano/SuMo" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fab fa-github me-1"></i> Source
-                                </a>
-                            </div>
-                            <div class="mb-3">
-                                <span class="badge bg-secondary me-2">Testing Framework</span>
-                                <span class="badge bg-info text-dark">GPL v3.0</span>
-                            </div>
-                            <p class="card-text">SuMo is a mutation testing tool designed for Solidity projects in NodeJS environments, supporting multiple testing frameworks and clean-room environments.</p>
-                            <div class="mt-auto">
-                                <small class="text-muted">Tech: JavaScript, Solidity, Testing</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 mb-4">
-                        <div class="modern-card h-100">
-                            <div class="d-flex align-items-center justify-content-between mb-3">
-                                <h4 class="card-title mb-0">Landfill</h4>
-                                <a href="https://zenodo.org/records/6080422" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fas fa-database me-1"></i> Dataset
-                                </a>
-                            </div>
-                            <div class="mb-3">
-                                <span class="badge bg-secondary me-2">Dataset</span>
-                                <span class="badge bg-success">Code Smells</span>
-                            </div>
-                            <p class="card-text">Landfill is a comprehensive code smell dataset for empirical software engineering research and code quality analysis.</p>
-                            <div class="mt-auto">
-                                <small class="text-muted">Research: Code Quality, Empirical Studies</small>
-                            </div>
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">Landfill</h4>
+                        <p class="card-text text-justify small">Landfill is a comprehensive code smell dataset for empirical software engineering research and code quality analysis.</p>
+                        <div class="mt-3">
+                            <a href="https://zenodo.org/records/6080422" target="_blank" class="btn btn-primary btn-sm me-2">
+                                <i class="fas fa-database me-1"></i> Dataset
+                            </a>
                         </div>
                     </div>
                 </div>
