Update navigation links to reflect active page and enhance styling for side navigation

--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                     <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
+                    <a class="nav-link js-scroll-trigger active" href="services.html">Professional Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
@@ -68,7 +68,6 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
-                <h2 class="mb-5 gradient-text">Professional Services</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
