--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                     <a class="nav-link js-scroll-trigger" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
+                    <a class="nav-link js-scroll-trigger active" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
@@ -68,7 +68,6 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto fade-in-up">
-                <h2 class="mb-5 gradient-text">Projects & Tools</h2>
 
                 <div class="row">
                     <div class="col-12">
