--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
 
     <meta charset="utf-8">
@@ -17,12 +14,11 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -57,7 +53,7 @@
                     <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
+                    <a class="nav-link js-scroll-trigger active" href="publications.html">Publications and Awards</a>
                 </li>
             </ul>
         </div>
@@ -71,8 +67,6 @@
     <div class="container-fluid p-0">
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
-
-            <h2 class="gradient-text mb-5">Publications and Awards</h2>
 
             <div class="card mb-2">
                 <div class="card-body">
