--- a/teaching.html
+++ b/teaching.html
@@ -50,7 +50,7 @@
                     <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+                    <a class="nav-link js-scroll-trigger active" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
@@ -66,8 +66,6 @@
 
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
-
-            <h2 class="gradient-text mb-5">Teaching</h2>
 
             <h4 class="gradient-text mb-5">Currently Taught Courses</h4>
 
