--- a/services.html
+++ b/services.html
@@ -176,14 +176,14 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">ACM Transactions on Software Engineering and Methodology</span>
-                                <span class="small text-muted">2024 - Now</span>
+                                <span class="small text-muted">2024 - <span style="color: #e67e22; font-weight: 600;">Now</span></span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">Elsevier Journal of Systems and Software</span>
-                                <span class="small text-muted">2021 - Now</span>
+                                <span class="small text-muted">2021 - <span style="color: #e67e22; font-weight: 600;">Now</span></span>
                             </div>
                         </div>
 
@@ -218,14 +218,14 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE)</span>
-                                <span class="small text-muted">2024, 2025, 2026</span>
+                                <span class="small text-muted">2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">IEEE/ACM International Conference on Software Engineering - New Ideas and Emerging Results (ICSE-NIER)</span>
-                                <span class="small text-muted">2026</span>
+                                <span class="small" style="color: #e67e22; font-weight: 600;">2026</span>
                             </div>
                         </div>
 
