--- a/teaching.html
+++ b/teaching.html
@@ -79,7 +79,7 @@
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">Software Dependability</h5>
                                         <p class="mb-1 text-muted small">MSc in Computer Science • University of Salerno</p>
-                                        <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with F. Palomba (Spring 2022)</p>
+                                        <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with F. Palomba in Spring 2022</p>
                                     </div>
                                     <div class="text-end">
                                         <span class="small" style="color: #e67e22; font-weight: 600;">Fall 2025</span><br>
@@ -105,6 +105,7 @@
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">Software Engineering for Secure Cloud Systems</h5>
                                         <p class="mb-1 text-muted small">MSc in Cyber-security and Cloud Technologies • University of Salerno</p>
+                                        <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with G. Catolino and also ++with C. Gravino in 2024</p>
                                     </div>
                                     <div class="text-end">
                                         <span class="small" style="color: #e67e22; font-weight: 600;">Spring 2026</span><br>
@@ -117,6 +118,7 @@
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">Object Oriented Programming</h5>
                                         <p class="mb-1 text-muted small">BSc in Computer Science • University of Salerno</p>
+                                        <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with V. Deufemia</p>
                                     </div>
                                     <div class="text-end">
                                         <span class="small" style="color: #e67e22; font-weight: 600;">Fall 2025</span><br>
@@ -130,6 +132,7 @@
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">International School</h5>
                                         <p class="mb-1 text-muted small">MSc in Cyber-security and Cloud Technologies • University of Salerno</p>
+                                        <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with C. De Maio, V. Deufemia, and V. Scarano</p>
                                     </div>
                                     <div class="text-end">
                                         <span class="small" style="color: #e67e22; font-weight: 600;">Spring 2026</span>
