Enhance accessibility and performance by reducing animations, adding support for reduced motion preferences, and optimizing CSS transitions; update project descriptions for clarity and accuracy

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022 PNRR</span>
                                 <span class="badge bg-secondary">Unit Leader</span>
                             </div>
-                            <p class="card-text">Modern software systems are heterogeneous and feature different non-functional requirements. RECHARGE is a novel automated framework for automating performance testing in CI/CD pipelines leveraging static analysis and search-based algorithms.</p>
+                            <p class="card-text">RECHARGE is a novel automated framework for automating performance testing in CI/CD pipelines leveraging static analysis and search-based algorithms.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Performance Testing, CI/CD, Search-based Algorithms</small>
                             </div>
@@ -109,7 +109,7 @@
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022</span>
                                 <span class="badge bg-success">Principal Investigator</span>
                             </div>
-                            <p class="card-text">Smartitude aims to provide a comprehensive set of software engineering methods and tools to improve the blockchain smart contract quality assurance by leveraging automated test case generation and formal methods.</p>
+                            <p class="card-text">SMARTITUDE aims to provide a comprehensive set of software engineering methods and tools to improve the blockchain smart contract quality assurance by leveraging automated test case generation and formal methods.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Blockchain, Smart Contracts, DeFi, Testing</small>
                             </div>
@@ -136,7 +136,7 @@
                                 <span class="badge bg-primary me-2">EU Horizon 2020</span>
                                 <span class="badge bg-warning text-dark">Work Package Leader</span>
                             </div>
-                            <p class="card-text">RADON aims at creating a DevOps framework to create and manage microservices-based applications that can optimally exploit serverless computing technologies and FaaS.</p>
+                            <p class="card-text">RADON aimed at creating a DevOps framework to create and manage microservices-based applications that can optimally exploit serverless computing technologies and FaaS.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Serverless, Microservices, DevOps</small>
                             </div>
@@ -155,7 +155,7 @@
                                 <span class="badge bg-primary me-2">FRS-FNRS & FWO</span>
                                 <span class="badge bg-warning text-dark">Work Package Leader</span>
                             </div>
-                            <p class="card-text">Excellence of Science Project providing novel software recommendation techniques for software ecosystems, addressing resilience, evolvability, heterogeneity, and social interaction.</p>
+                            <p class="card-text">SECO-ASSIST was an Excellence of Science Project providing novel software recommendation techniques for software ecosystems, addressing resilience, evolvability, heterogeneity, and social interaction.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Software Ecosystems, Recommendations, Social Networks</small>
                             </div>
@@ -174,7 +174,7 @@
                                 <span class="badge bg-primary me-2">Innoviris</span>
                                 <span class="badge bg-warning text-dark">Work Package Leader</span>
                             </div>
-                            <p class="card-text">Innoviris Project that developed an intelligent assistant that recommends source code modernization actions by mining patterns from legacy software repositories. It continuously learned from code structure and changes to improve its recommendations through advanced pattern mining algorithms.</p>
+                            <p class="card-text">INTIMALS was an Innoviris project that developed an intelligent assistant to recommend source code modernization actions by mining patterns from legacy software repositories. It continuously learned from code structure and changes to improve its recommendations through advanced pattern mining algorithms.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Pattern Mining, Software Modernization, Intelligent Assistant</small>
                             </div>
