--- a/services.html
+++ b/services.html
@@ -239,14 +239,14 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">IEEE/ACM International Conference on Mining Software Repositories (MSR)</span>
-                                <span class="small text-muted">2022, 2023, 2024, 2025</span>
+                                <span class="small text-muted">2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">IEEE International Conference on Program Comprehension (ICPC)</span>
-                                <span class="small text-muted">2020, 2022, 2023, 2024, 2025</span>
+                                <span class="small text-muted">2020, 2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                             </div>
                         </div>
 
