--- a/teaching.html
+++ b/teaching.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-touch-icon" href="img/profile.png">
+    <meta name="format-detection" content="telephone=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
