Refactor course sections by removing unnecessary margin classes for improved layout consistency

--- a/teaching.html
+++ b/teaching.html
@@ -76,7 +76,7 @@
                         <div class="modern-card mb-4">
                             <h3 class="mb-4 gradient-text">Currently Taught Courses</h3>
                             
-                            <div class="mb-4">
+                            <div>
                                 <div class="d-flex flex-wrap align-items-start justify-content-between border-bottom pb-3 mb-3">
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">Software Dependability</h5>
@@ -150,7 +150,7 @@
                         <div class="modern-card mb-4">
                             <h3 class="mb-4 gradient-text">Past Taught Courses</h3>
                             
-                            <div class="mb-4">
+                            <div>
                                 <div class="d-flex flex-wrap align-items-start justify-content-between border-bottom pb-3 mb-3">
                                     <div class="flex-grow-1">
                                         <h5 class="mb-1">Empirical Research Methods</h5>
