--- a/services.html
+++ b/services.html
@@ -30,32 +30,36 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top text-left" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="index.html">
-            <span class="d-block d-lg-none">Dario Di Nucci</span>
-            <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
-            </span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html">
+                <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt="" style="width: 32px; height: 32px;">
+                <span class="d-block d-lg-none">Dario Di Nucci</span>
+                <span class="d-none d-lg-block">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+                </span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="index.html">About Me</a>
+                    <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
+                    <a class="nav-link" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger active" href="services.html">Professional Services</a>
+                    <a class="nav-link active" href="services.html">Professional Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+                    <a class="nav-link" href="teaching.html">Teaching</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="publications.html">Publications and Awards</a>
+                    <a class="nav-link" href="publications.html">Publications and Awards</a>
                 </li>
             </ul>
         </div>
