Highlight upcoming conference years in the services section for better visibility

--- a/services.html
+++ b/services.html
@@ -264,7 +264,7 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">IEEE International Conference on Software Maintenance and Evolution (ICSME)</span>
-                                <span class="small text-muted">2023, 2024, 2025</span>
+                                <span class="small text-muted">2023, 2024, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
                             </div>
                         </div>
 
@@ -278,7 +278,7 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</span>
-                                <span class="small text-muted">2021, 2022, 2023</span>
+                                <span class="small text-muted">2021, 2022, 2023, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
                             </div>
                         </div>
 
