Fix formatting of publication years for better visibility in services section

--- a/services.html
+++ b/services.html
@@ -180,14 +180,14 @@
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">ACM Transactions on Software Engineering and Methodology</span>
-                                <span class="small text-muted">2024 - <span style="color: #e67e22; font-weight: 600;">Now</span></span>
+                                <span class="small text-muted"><span style="color: #e67e22; font-weight: 600;">2024 - Now</span></span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">Elsevier Journal of Systems and Software</span>
-                                <span class="small text-muted">2021 - <span style="color: #e67e22; font-weight: 600;">Now</span></span>
+                                <span class="small text-muted"><span style="color: #e67e22; font-weight: 600;">2021 - Now</span></span>
                             </div>
                         </div>
 
