--- a/services.html
+++ b/services.html
@@ -81,91 +81,91 @@
                         
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://dsd-seaa.com/seaa2025/" target="_blank" class="mb-0 small text-decoration-none">51st Euromicro Conference on Software Engineering and Advanced Applications</a>
+                                <a href="https://dsd-seaa.com/seaa2025/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">51st Euromicro Conference on Software Engineering and Advanced Applications</a>
                                 <span class="small text-muted">Finance Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://conf.researchr.org/home/ease-2024" target="_blank" class="mb-0 small text-decoration-none">28th International Conference on Evaluation and Assessment in Software Engineering</a>
+                                <a href="https://conf.researchr.org/home/ease-2024" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">28th International Conference on Evaluation and Assessment in Software Engineering</a>
                                 <span class="small text-muted">Finance Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://dsd-seaa.com/dsd-seaa-2023-2/" target="_blank" class="mb-0 small text-decoration-none">49th Euromicro Conference on Software Engineering and Advanced Applications</a>
+                                <a href="https://dsd-seaa.com/dsd-seaa-2023-2/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">49th Euromicro Conference on Software Engineering and Advanced Applications</a>
                                 <span class="small text-muted">Program Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="http://sattose.org/2023/" target="_blank" class="mb-0 small text-decoration-none">15th Seminar on Advanced Techniques & Tools for Software Evolution</a>
+                                <a href="http://sattose.org/2023/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">15th Seminar on Advanced Techniques & Tools for Software Evolution</a>
                                 <span class="small text-muted">Program Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://sesalabunisa.github.io/ISSSE-2023/" target="_blank" class="mb-0 small text-decoration-none">16th International Summer School on Software Engineering</a>
+                                <a href="https://sesalabunisa.github.io/ISSSE-2023/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">16th International Summer School on Software Engineering</a>
                                 <span class="small text-muted">Organizer</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://benevol2021.github.io/" target="_blank" class="mb-0 small text-decoration-none">20th Belgium-Netherlands Software Evolution Workshop</a>
+                                <a href="https://benevol2021.github.io/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">20th Belgium-Netherlands Software Evolution Workshop</a>
                                 <span class="small text-muted">Organizer</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://conf.researchr.org/home/icpc-2021" target="_blank" class="mb-0 small text-decoration-none">29th International Conference on Program Comprehension</a>
+                                <a href="https://conf.researchr.org/home/icpc-2021" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">29th International Conference on Program Comprehension</a>
                                 <span class="small text-muted">Tool Demo Co-Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://soheal.github.io/" target="_blank" class="mb-0 small text-decoration-none">3rd International Workshop on Software Health</a>
+                                <a href="https://soheal.github.io/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">3rd International Workshop on Software Health</a>
                                 <span class="small text-muted">Organizer</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://conf.researchr.org/home/icpc-2020" target="_blank" class="mb-0 small text-decoration-none">28th International Conference on Program Comprehension</a>
+                                <a href="https://conf.researchr.org/home/icpc-2020" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">28th International Conference on Program Comprehension</a>
                                 <span class="small text-muted">Publicity Co-Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://2020.programming-conference.org/home/eniac-2020" target="_blank" class="mb-0 small text-decoration-none">1st International Workshop on ENgineering Intelligent Applications' Code</a>
+                                <a href="https://2020.programming-conference.org/home/eniac-2020" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">1st International Workshop on ENgineering Intelligent Applications' Code</a>
                                 <span class="small text-muted">Program Chair</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="http://soft.vub.ac.be/benevol2019/" target="_blank" class="mb-0 small text-decoration-none">18th Belgium-Netherlands Software Evolution Workshop</a>
+                                <a href="http://soft.vub.ac.be/benevol2019/" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">18th Belgium-Netherlands Software Evolution Workshop</a>
                                 <span class="small text-muted">Organizer</span>
                             </div>
                         </div>
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://sesalabunisa.github.io/en/issse.html?year=2017" target="_blank" class="mb-0 small text-decoration-none">13th International Summer School on Software Engineering</a>
+                                <a href="https://sesalabunisa.github.io/en/issse.html?year=2017" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">13th International Summer School on Software Engineering</a>
                                 <span class="small text-muted">Scientific Secretariat</span>
                             </div>
                         </div>
 
                         <div class="mb-0">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <a href="https://sesalabunisa.github.io/en/issse.html?year=2016" target="_blank" class="mb-0 small text-decoration-none">12th International Summer School on Software Engineering</a>
+                                <a href="https://sesalabunisa.github.io/en/issse.html?year=2016" target="_blank" class="mb-0 small text-decoration-none" style="color: #f39c12;">12th International Summer School on Software Engineering</a>
                                 <span class="small text-muted">Scientific Secretariat</span>
                             </div>
                         </div>
@@ -302,11 +302,40 @@
                     <div class="col-12">
                         <div class="modern-card mb-4">
                             <h3 class="mb-4 gradient-text">Frequent Reviewer for International Journals</h3>
+
+                        <div class="mb-2">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                                <span class="mb-0 small">Transactions on Software Engineering</span>
+                                <span class="small text-muted">IEEE</span>
+                            </div>
+                        </div>
+
+                        <div class="mb-2">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                                <span class="mb-0 small">Transactions on Software Engineering and Methodology</span>
+                                <span class="small text-muted">ACM</span>
+                            </div>
+                        </div>
                         
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">Empirical Software Engineering</span>
                                 <span class="small text-muted">Springer</span>
+                            </div>
+                        </div>
+
+                        <div class="mb-2">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                                <span class="mb-0 small">Journal of Systems and Software</span>
+                                <span class="small text-muted">Elsevier</span>
+                            </div>
+                        </div>
+
+
+                        <div class="mb-2">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                                <span class="mb-0 small">Information and Software Technology</span>
+                                <span class="small text-muted">Elsevier</span>
                             </div>
                         </div>
 
@@ -319,45 +348,17 @@
 
                         <div class="mb-2">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <span class="mb-0 small">Information and Software Technology</span>
-                                <span class="small text-muted">Elsevier</span>
-                            </div>
-                        </div>
-
-                        <div class="mb-2">
-                            <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">Journal of Software: Evolution and Process</span>
                                 <span class="small text-muted">Wiley</span>
                             </div>
                         </div>
 
-                        <div class="mb-2">
-                            <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <span class="mb-0 small">Journal of Systems and Software</span>
-                                <span class="small text-muted">Elsevier</span>
-                            </div>
-                        </div>
-
-                        <div class="mb-2">
+                        <div class="mb-0">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
                                 <span class="mb-0 small">Science of Computer Programming</span>
                                 <span class="small text-muted">Elsevier</span>
                             </div>
-                        </div>
-
-                        <div class="mb-2">
-                            <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <span class="mb-0 small">Transactions on Software Engineering</span>
-                                <span class="small text-muted">IEEE</span>
-                            </div>
-                        </div>
-
-                        <div class="mb-0">
-                            <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                <span class="mb-0 small">Transactions on Software Engineering and Methodology</span>
-                                <span class="small text-muted">ACM</span>
-                            </div>
-                        </div>
+                        </div>                        
 
                     </div>
                 </div>
