Fix typo in course description for clarity

--- a/teaching.html
+++ b/teaching.html
@@ -109,7 +109,7 @@
                             <div class="flex-grow-1">
                                 <h5 class="mb-1">Software Engineering for Secure Cloud Systems</h5>
                                 <p class="mb-1 text-muted small">MSc in Cyber-security and Cloud Technologies • University of Salerno</p>
-                                <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with G. Catolino and also ++with C. Gravino in 2024</p>
+                                <p class="mb-0 text-muted" style="font-size: 0.75rem;">Co-taught with G. Catolino and also and also with C. Gravino in 2024</p>
                             </div>
                             <div class="text-end">
                                 <span class="small" style="color: #e67e22; font-weight: 600;">Spring 2026</span><br>
