Fix date alignment on teaching page; update text styles for consistency

--- a/teaching.html
+++ b/teaching.html
@@ -87,9 +87,9 @@
                             </div>
                             <div class="text-end">
                                 <span class="small" style="color: #e67e22; font-weight: 600;">Fall 2025</span><br>
-                                <span class="small text-muted mb-1">Fall 2024</span><br>
-                                <span class="small text-muted mb-1">Fall 2023</span><br>
-                                <span class="small text-muted mb-1">Spring 2023</span><br>
+                                <span class="small text-muted">Fall 2024</span><br>
+                                <span class="small text-muted">Fall 2023</span><br>
+                                <span class="small text-muted">Spring 2023</span><br>
                                 <span class="small text-muted">Spring 2022</span>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="text-end">
                                 <span class="small" style="color: #e67e22; font-weight: 600;">Spring 2026</span><br>
-                                <span class="small text-muted mb-1">Spring 2025</span><br>
+                                <span class="small text-muted">Spring 2025</span><br>
                                 <span class="small text-muted">Spring 2024</span>
                             </div>
                         </div>
@@ -126,8 +126,8 @@
                             </div>
                             <div class="text-end">
                                 <span class="small" style="color: #e67e22; font-weight: 600;">Fall 2025</span><br>
-                                <span class="small text-muted mb-1">Fall 2024</span><br>
-                                <span class="small text-muted mb-1">Fall 2023</span><br>
+                                <span class="small text-muted">Fall 2024</span><br>
+                                <span class="small text-muted">Fall 2023</span><br>
                                 <span class="small text-muted">Fall 2022</span>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 <p class="mb-1 text-muted small">PhD in Computer Science • University of Salerno</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted mb-1">Summer 2025</span><br>
+                                <span class="small text-muted">Summer 2025</span><br>
                                 <span class="small text-muted">Summer 2023</span>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                 <p class="mb-1 text-muted small">PhD in Computer Science • University of Salerno</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted mb-1">Winter 2024</span><br>
+                                <span class="small text-muted">Winter 2024</span><br>
                                 <span class="small text-muted">Winter 2023</span>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                 <p class="mb-1 text-muted small">MSc in Data Science in Business & Entrepreneurship • Jheronimus Academy of Data Science</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted mb-1">Fall 2021</span><br>
+                                <span class="small text-muted">Fall 2021</span><br>
                                 <span class="small text-muted">Fall 2020</span>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 <p class="mb-1 text-muted small">Pre-MSc in Data Science in Business and Entrepreneurship • Jheronimus Academy of Data Science</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted mb-1">Spring 2021</span><br>
+                                <span class="small text-muted">Spring 2021</span><br>
                                 <span class="small text-muted">Spring 2020</span>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                                 <p class="mb-1 text-muted small">MSc in Computer Science • Vrije Universiteit Brussel</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted mb-1">2019/20</span><br>
+                                <span class="small text-muted">2019/20</span><br>
                                 <span class="small text-muted">2018/19</span>
                             </div>
                         </div>
