--- a/teaching.html
+++ b/teaching.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body data-page="teaching">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
