--- a/publications.html
+++ b/publications.html
@@ -98,12 +98,12 @@
                     </div>
                     
                     <div class="award-item">
-                        <span class="small">NSF travel support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States</span>
+                        <span class="small">NSF Travel Support - Symposium on Search-Based Software Engineering, Raleigh, NC, United States</span>
                         <span class="small text-muted">2016</span>
                     </div>
                     
                     <div class="award-item">
-                        <span class="small">ACM SIGSOFT travel support - 37th International Conference on Software Engineering, Florence, Italy</span>
+                        <span class="small">ACM SIGSOFT Travel Support - 37th International Conference on Software Engineering, Florence, Italy</span>
                         <span class="small text-muted">2015</span>
                     </div>
                 </div>
