Swap conferences; update years for clarity and consistency

--- a/services.html
+++ b/services.html
@@ -183,13 +183,13 @@
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE/ACM International Conference on Software Engineering - New Ideas and Emerging Results (ICSE-NIER)</span>
-                        <span class="small" style="color: #e67e22; font-weight: 600;">2026</span>
+                        <span class="small">IEEE/ACM International Conference on Software Engineering - Software Engineering in Practice Track (ICSE-SEIP)</span>
+                        <span class="small">2023, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE/ACM International Conference on Software Engineering - Software Engineering in Practice Track (ICSE-SEIP)</span>
-                        <span class="small">2023, 2025</span>
+                        <span class="small">IEEE/ACM International Conference on Software Engineering - New Ideas and Emerging Results (ICSE-NIER)</span>
+                        <span class="small" style="color: #e67e22; font-weight: 600;">2026</span>
                     </div>
 
                     <div class="award-item">
@@ -204,7 +204,7 @@
 
                     <div class="award-item">
                         <span class="small">IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER)</span>
-                        <span class="small">2020, 2021, 2022, 2023, 2024, 2025</span>
+                        <span class="small">2020, 2021, 2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
@@ -213,13 +213,13 @@
                     </div>
 
                     <div class="award-item">
-                        <span class="small">International Conference on Product-Focused Software Process Improvement (PROFES)</span>
-                        <span class="small">2023</span>
+                        <span class="small">IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</span>
+                        <span class="small">2021, 2022, 2023, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</span>
-                        <span class="small">2021, 2022, 2023, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
+                        <span class="small">International Conference on Product-Focused Software Process Improvement (PROFES)</span>
+                        <span class="small">2023</span>
                     </div>
 
                     <div class="award-item">
