Replace ESEC/FSE with FSE

--- a/services.html
+++ b/services.html
@@ -178,7 +178,7 @@
                     <h3 class="gradient-text">Program Committee Member of International Conferences (Research Track)</h3>
                 
                     <div class="award-item">
-                        <span class="small">ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE)</span>
+                        <span class="small">ACM International Conference on the Foundations of Software Engineering (FSE)</span>
                         <span class="small">2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
