--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/resume.min.css?v=20250808" rel="stylesheet">
     <link href="css/academicons.css" rel="stylesheet" />
 
 </head>
@@ -116,7 +116,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/modern-interactions.js"></script>
+    <script src="js/modern-interactions.js?v=20250808"></script>
 
 </body>
 
