Enhance website with CSS minification, update meta descriptions, and improve JavaScript interactions
- Added CSS minification task to Gulp for better performance.
- Updated meta descriptions and titles across multiple HTML pages for improved SEO.
- Simplified JavaScript interactions by removing complex animations and optimizing event handling.
- Updated package.json to include new build scripts and dependencies.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Dario Di Nucci - Assistant Professor in Software Engineering at University of Salerno, specializing in software testing, energy efficiency, and empirical software engineering research.">
+    <meta name="author" content="Dario Di Nucci">
 
     <title>Dario Di Nucci</title>
 
