--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Research projects by Dario Di Nucci - Tools and frameworks for software engineering, including DefUse, RepoMiner, AMBER, and other innovative solutions for software testing and analysis.">
+    <meta name="author" content="Dario Di Nucci">
 
-    <title>Dario Di Nucci</title>
+    <title>Projects - Dario Di Nucci</title>
 
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
