--- a/publications.html
+++ b/publications.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Publications by Dario Di Nucci - Research papers in software engineering, software testing, energy efficiency, and empirical software engineering published in top-tier venues.">
+    <meta name="author" content="Dario Di Nucci">
 
-    <title>Dario Di Nucci</title>
+    <title>Publications - Dario Di Nucci</title>
 
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
