--- a/teaching.html
+++ b/teaching.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-touch-icon" href="img/profile.png">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Teaching activities by Dario Di Nucci - Courses in software engineering, software testing, and computer science at University of Salerno and other institutions.">
+    <meta name="author" content="Dario Di Nucci">
 
-    <title>Dario Di Nucci</title>
+    <title>Teaching - Dario Di Nucci</title>
 
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
